fix about section on mobile

--- a/src/About/About.module.css
+++ b/src/About/About.module.css
@@ -11,26 +11,30 @@
 }
 
 .skills img, .skills svg{
-    height: 40%;
+    width: 8%;
     margin: 0;
 }
 
 .top{
     display: flex;
     flex: 1;
-    font-size: x-large;
+    font-size: 4vmin;
 }
 
 .column{
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    padding-top: 3vmin;
 }
 
 .logos{
-    align-items: center;
+    align-items: baseline;
+    padding-top: 3vmin;
     justify-content: center;
-    gap: 10%;
+    gap: 10vmin;
+    padding-left: 1vmin;
+    padding-right: 1vmin;
 }
 
 .bottom{
@@ -53,8 +57,8 @@
 }
 
 .right div{
-    margin-top: -5%;
-    margin-bottom: 5%;
+    margin-top: -.05vmin;
+    margin-bottom: .02vmin;
 }
 
 div.skills{
@@ -66,13 +70,13 @@ div.skills{
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 2%;
+    padding: 2vmin;
     box-sizing: border-box;
-    gap: 2%;
+    gap: 2vmin;
 }
 
 .skills p {
-    font-size: xx-large;
+    font-size: 8vmin;
     margin-right: auto;
 }
 
